--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
