--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "firebase": "^9.9.2",
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
