--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
