--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
