--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
     "Merelli",
     "Metaspace",
     "saraking",
-    "Shotwell"
+    "Shotwell",
+    "signin",
+    "signout"
   ],
   "search.exclude": {
     "**/*.code-search": false,
