--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "adriennemareebrown",
     "alexisshotwell",
+    "Inputboxx",
     "jaiyajohn",
     "Kyodo",
     "martinlutherking",
