vercel bug deploy fix

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/firebase-adapter": "^1.0.1",
+    "crypto-random-string": "^5.0.0",
     "firebase": "^9.9.2",
     "next": "latest",
     "next-auth": "^4.10.3",
-    "random-hash": "^4.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
