--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
     "@types/node": "17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "18.0.5",
