--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -12,6 +13,7 @@
     "@next-auth/firebase-adapter": "^1.0.1",
     "crypto-random-string": "^5.0.0",
     "firebase": "^9.9.2",
+    "jest-environment-jsdom": "^29.1.1",
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
@@ -29,6 +31,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^29.1.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
